test/visibility/empty/exceptEverything.good
exceptEverything.chpl:12: In function 'main':
exceptEverything.chpl:16: error: unresolved call 'foo()'
exceptEverything.chpl:16: note: because no functions named foo found in scope
